SFDC/src/objects/Accompaniment__c.object
<CustomObject>
    <description>This is the Relation that is linked to an Interaction.</description>
    <fields>
        <fullName>Accompaniment_Name1__c</fullName>
        <formula>Relation__r.Related_Contact__r.Contact_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accompaniment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accompaniment_Name__c</fullName>
        <formula>HYPERLINK(&quot;https://cs3.salesforce.com/&quot; &amp; Id,Interaction__r.Contact__r.Contact_Full_Name__c + &quot;&apos;&quot; +&apos;s &apos; + Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accompaniment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversation__c</fullName>
        <label>Conversation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <description>The Interaction to which this Accompaniment is related to.</description>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Accompaniments</relationshipLabel>
        <relationshipName>Accompaniments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <description>The Relation that describes the Accompaniment.</description>
        <label>Relation</label>
        <referenceTo>Relation__c</referenceTo>
        <relationshipLabel>Accompaniments</relationshipLabel>
        <relationshipName>Accompaniments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Of_Accompaniment__c</fullName>
        <description>Role of the accompaniment</description>
        <label>Accompaniment Role</label>
        <picklist>
            <picklistValues>
                <fullName>Silent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Accompaniment</label>
    <nameField>
        <displayFormat>Accompaniment-{000}</displayFormat>
        <label>Accompaniment Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accompaniments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>